package com.spaghetticodegang.trylater.recommendation.category;

public enum CategoryType {
    RECIPE,
    MEDIA,
    LOCATION,
    PRODUCT
}

